[package]
name = "smtpclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
native-tls = "0.2"
base64 = "0.13.0"
chrono = "0.4.19"

[dev-dependencies]
aml = { git = "https://github.com/acottis/aml" }
